--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "dmstr/yii2-bootstrap",
-    "description": "yii2 bootstrap components and extensions from diemeisterei GmbH",
+    "name": "brunohenriquebh/yii2-bootstrap",
+    "description": "yii2 bootstrap components and extensions from diemeisterei GmbH (branch for bootstrap 4)",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","bootstrap"],
     "license": "BSD-3-Clause",
@@ -8,14 +8,18 @@
         {
             "name": "Christopher Stebe",
             "email": "c.stebe@herzogkommunikation.de"
+        },
+        {
+            "name": "Bruno H. H. Gouvêa",
+            "email": "brunohenriquebh@gmail.com"
         }
     ],
     "require": {
-        "yiisoft/yii2-bootstrap": "^2.0.6"
+        "yiisoft/yii2-bootstrap4": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "dmstr\\bootstrap\\": ""
+            "brunohenriquebh\\bootstrap4\\": ""
         }
     }
 }
